send mail event and listener
